# ibswm

./: Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
client/: Cargo.toml
examples/: ibsc.md  sxhkd.md
src/: client.rs  command_executor.rs  connection.rs  desktop.rs  main.rs  monitors.rs  window_manager.rs
src/cli/: lib.rs  main.rs
x11/: Cargo.toml
x11/src/: connection.rs  lib.rs  window.rs
