[package]
name = "ibswm"
version = "0.1.0"
authors = ["Cyril Mizzi <cyril@lesiteimmo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.6.0", features = ["allow-unsafe-code", "randr", "xinerama"] }
log = "0.4.11"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
nix = "0.18.0"

[workspace]
members = ["cli"]