[package]
name = "x11"
version = "0.1.0"
authors = ["Cyril Mizzi <cyril@lesiteimmo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.6.0", features = ["allow-unsafe-code", "randr", "xinerama"] }
